# serde-vars

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
src/: content.rs  de.rs  lib.rs  value.rs
src/source/: file.rs  mod.rs  string.rs  utils.rs
tests/: de.rs  file.rs  string.rs
