[package]
name = "serde-vars"
version = "0.1.0"
authors = ["David Herberth <github@dav1d.de>"]
description = "Conveniently expose (environment) variables to your serde based data structures, like configurations."
license = "MIT"
categories = ["config", "data-structures", "parsing"]
repository = "https://github.com/Dav1dde/serde-vars"
edition = "2021"


[lints.clippy]
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"


[dependencies]
serde = "1"


[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde_bytes = "0.11"
insta = "1.43"
